@@ -89,9 +89,14 @@ cache cache_{{ conf.id }}
     {% endif -%}
 
     {% elif conf.mode in ["log", "filebeat"] -%} {# if conf.mode == "http" -#}
-        {% for listener in conf.listeners -%}
-            server server_{{ conf.name }}-{{loop.index}} {{listener.generate_server_conf()}}
-        {% endfor -%}
+    {% if conf.healthcheck_service -%}
+    option tcp-check
+    tcp-check connect linger
+    tcp-request connection reject if { nbsrv() lt 1 }
+    {%- endif -%} {# if conf.healthcheck_service #}
+    {% for listener in conf.listeners -%}
+    server server_{{ conf.name }}-{{loop.index}} {{listener.generate_server_conf()}}
+    {% endfor -%} {# for listener in conf.listeners #}
     {% endif -%} {# elif conf.mode in ["log", "filebeat"] -#}
 
     {% if conf.external_idps -%}
