@@ -211,7 +211,7 @@ class FrontendForm(ModelForm):
                            'error_template', 'tenants_config', 'enable_logging_reputation', 'tags', 'timeout_client', 'timeout_keep_alive',
                            'parser_tag', 'file_path', 'ratelimit_interval', 'ratelimit_burst', 'expected_timezone',
                            'kafka_brokers', 'kafka_topic', 'kafka_consumer_group', 'kafka_options',
-                           'nb_workers','mmdb_cache_size','redis_batch_size', 'redis_use_local',
+                           'healthcheck_service', 'nb_workers', 'mmdb_cache_size', 'redis_batch_size', 'redis_use_local',
                            'redis_mode', 'redis_use_lpop', 'redis_server', 'redis_port', 'redis_key', 'redis_password',
                            'node', 'darwin_mode', 'api_parser_type', 'api_parser_use_proxy', 'api_parser_custom_proxy',
                            'api_parser_verify_ssl', 'api_parser_custom_certificate',
@@ -329,7 +329,7 @@ class FrontendForm(ModelForm):
                   'https_redirect', 'log_forwarders_parse_failure', 'parser_tag',
                   'ratelimit_interval', 'ratelimit_burst', 'expected_timezone', 'file_path',
                   'kafka_brokers', 'kafka_topic', 'kafka_consumer_group', 'kafka_options',
-                  'nb_workers','mmdb_cache_size','redis_batch_size', 'redis_mode', 'redis_use_lpop',
+                  'healthcheck_service', 'nb_workers', 'mmdb_cache_size', 'redis_batch_size', 'redis_mode', 'redis_use_lpop',
                   'redis_server', 'redis_port', 'redis_key', 'redis_password', 'redis_stream_consumerGroup',
                   'redis_stream_consumerName', 'redis_stream_startID', 'redis_stream_acknowledge', 'redis_stream_reclaim_timeout',
                   'node', 'darwin_policies', 'darwin_mode', 'api_parser_type', 'api_parser_use_proxy',
@@ -450,6 +450,7 @@ class FrontendForm(ModelForm):
             'redis_stream_startID': Select(choices=REDIS_STARTID_CHOICES, attrs={'class': 'form-control select2'}),
             'redis_stream_acknowledge': CheckboxInput(attrs={'class': 'js-switch'}),
             'redis_stream_reclaim_timeout': NumberInput(attrs={'class': 'form-control'}),
+            'healthcheck_service': CheckboxInput(attrs={'class': 'js-switch'}),
             'nb_workers': NumberInput(attrs={'class': 'form-control'}),
             'mmdb_cache_size': NumberInput(attrs={'class': 'form-control'}),
             'redis_batch_size': NumberInput(attrs={'class': 'form-control'}),
