@@ -464,6 +464,17 @@
                           </div>
                         </div>
                       </div>
+                      <div class="row log-mode haproxy-conf">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label class="col-sm-4 control-label">{{form.healthcheck_service.label}}</label>
+                            <div class="col-sm-5">
+                              {{form.healthcheck_service}}
+                              {{form.healthcheck_service.errors|safe}}
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                       <div class="row log-mode">
                         <div class="col-md-12">
                           <div class="form-group">
